--- a/package.json
+++ b/package.json
@@ -9,48 +9,47 @@
     "lint": "next lint --fix",
     "typecheck": "tsc --noEmit",
     "prepare": "husky install",
-    "db:migrate": "dotenv -e .env.local -- npx prisma db push"
+    "db:migrate": "dotenv -e .env.local -- npx prisma db push",
+    "about:postinstall": "echo 'https://www.prisma.io/docs/guides/other/troubleshooting-orm/help-articles/vercel-caching-issue'",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.1.0",
-    "@prisma/client": "^4.13.0",
-    "axios": "^1.3.6",
+    "@prisma/client": "^4.14.0",
     "classnames": "^2.3.2",
     "file-saver": "^2.0.5",
     "go-try": "^2.0.2",
     "nanoid": "^4.0.2",
-    "next": "^13.3.0",
+    "next": "^13.4.2",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-share": "^4.4.1",
-    "uri-js": "^4.4.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
-    "@types/node": "^18.15.12",
+    "@types/node": "^20.1.4",
     "@types/qrcode.react": "^1.0.2",
-    "@types/react": "^18.0.37",
+    "@types/react": "^18.2.6",
     "@types/react-copy-to-clipboard": "^5.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@types/react-dom": "^18.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
     "autoprefixer": "^10.4.13",
     "dotenv-cli": "^7.2.1",
-    "eslint": "^8.38.0",
-    "eslint-config-next": "^13.3.0",
+    "eslint": "^8.40.0",
+    "eslint-config-next": "^13.4.2",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-deprecation": "^1.4.1",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.1",
+    "lint-staged": "^13.2.2",
     "postcss": "^8.4.23",
-    "prettier": "^2.8.7",
-    "prisma": "^4.13.0",
-    "tailwindcss": "^3.3.1",
-    "typescript": "^4.9.5"
+    "prettier": "^2.8.8",
+    "prisma": "^4.14.0",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
