--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_BASE_URL=https://onurl.vercel.app
-DATABASE_URL=
+NEXT_PUBLIC_BASE_URL=https://go.hexidev.nl
+DATABASE_URL=mongodb://cli3n9mou000f9mnx9iwhaazh:SoG4T36RfbK29QnUhpfl9C9R@cli3n9mov000cnx9mrt35y739:27017/?readPreference=primary&ssl=false
